# serde-short

./: Cargo.toml  README.md
src/: lib.rs  parse.rs
tests/: test.rs
