[package]
name = "serde_short"
version = "0.1.2"
authors = ["Nadhmi JAZI <nadhmi.eljazi@gmail.com>"]
categories = ["encoding", "no-std", "no-std::no-alloc"]
description = "Derive Serialize and Deserialize for enum reperesented as C short enum"
edition = "2021"
keywords = ["serde", "serialization", "integer"]
license = "MIT"
repository = "https://github.com/jazi007/serde-short"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
cdr = "0.2.4"
serde = "1"
serde_json = "1"
serde_repr = "0.1.19"

